fix: remove slider arrows, fix spacing and sizing

--- a/src/checkout.css
+++ b/src/checkout.css
@@ -1,8 +1,15 @@
 .form-container {
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.checkout-form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .checkout-header {
@@ -109,11 +116,18 @@
   font-size: 16px;
 }
 
+.submit-wrapper {
+  width: calc(33.333% - 24px);
+}
+
 .payment-submit {
   display: block;
-  width: calc(33.333% - 24px);
+  width: 100%;
+  background-color: white;
+  color: black;
+  font-weight: 400;
   margin-top: 40px;
-  padding: 12px 40px;
+  /* padding: 12px 80px; */
   border: 2px solid black;
   border-radius: 0px;
   font-size: 20px;
@@ -122,10 +136,11 @@
 .donate-disclaimer {
   width: 100vw;
   margin: 0 auto;
-  position: fixed;
+  text-align: center;
+  /* position: fixed;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%); */
 }
 
 .donate-disclaimer > p {
@@ -177,7 +192,7 @@ input[type="number"] {
 
   .subhead-mobile {
     display: block;
-    margin-bottom: 16px;
+    margin-bottom: 4px;
     font-size: 20px;
   }
 
@@ -185,7 +200,7 @@ input[type="number"] {
     margin: 24px;
     padding: 0;
     margin-left: 0;
-    margin-bottom: 12px;
+    margin-bottom: 4px;
     font-size: 20px;
   }
 
@@ -211,6 +226,10 @@ input[type="number"] {
     margin: 0;
   }
 
+  .submit-wrapper {
+    width: 100%;
+  }
+
   .payment-submit {
     display: none;
   }
@@ -219,6 +238,9 @@ input[type="number"] {
     display: block;
     font-size: 20px;
     width: 100%;
+    background-color: white;
+    color: black;
+    font-weight: 400;
   }
 
   .donate-disclaimer {
